--- a/api-in-depth/package.json
+++ b/api-in-depth/package.json
@@ -21,6 +21,7 @@
         "@types/node": "^20.10.6",
         "@types/supertest": "^6.0.2",
         "jest": "^29.7.0",
+        "nodemon": "^3.1.4",
         "supertest": "^6.3.3",
         "ts-jest": "^29.1.1",
         "ts-node": "^10.9.2",
