--- a/api-in-depth/package.json
+++ b/api-in-depth/package.json
@@ -31,6 +31,7 @@
     "dependencies": {
         "dotenv": "^16.4.4",
         "express": "^4.18.2",
+        "joi": "^17.12.2",
         "reflect-metadata": "^0.2.1"
     }
 }
