--- a/api-in-depth/package.json
+++ b/api-in-depth/package.json
@@ -32,6 +32,7 @@
         "dotenv": "^16.4.4",
         "express": "^4.18.2",
         "joi": "^17.12.2",
+        "mongoose": "^8.1.2",
         "reflect-metadata": "^0.2.1"
     }
 }
